--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,14 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h2 {
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+}
+
+.hw {
+    width: 1140px;
+    margin: 0 auto;
+}
