--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -3,9 +3,17 @@
 }
 
 .hw {
-
+    width: 1140px;
+    margin: 0 auto;
 }
 
 .hwTitle {
+    border-bottom: 1px solid #D9D9D9;
+    padding-top: 40px;
+    padding-bottom: 10px;
+}
 
+.hwTitle h2 {
+    width: 1140px;
+    margin: 0 auto;
 }
