--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,21 @@
 .burgerMenuIcon {
+  cursor: pointer;
 }
 
 .header {
+  padding: 22px 0;
+  box-shadow: 0px 0px 40px rgba(29, 33, 38, 0.13), 0px 0px 2px rgba(29, 33, 38, 0.1);
+}
+
+.wrapper {
+  width: 1140px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header h1 {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 29px;
 }
