--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,64 @@
 .sidebar {
+  background: #fff;
+  box-shadow: 0px 10px 40px rgba(29, 33, 38, 0.13), 0px 1px 2px rgba(29, 33, 38, 0.1);
+
+  padding-left: 45px;
+  max-width: 317px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  padding-top: 65px;
 }
 
 .sidebar.open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 20;
 }
 
 .background {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  background: #000000;
+  opacity: 0.3;
 }
 
 .nav {
+  display: flex;
+  flex-direction: column;
+  gap: 45px;
 }
 
 .nav a {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 27px;
+  text-decoration: none;
+  color: black;
 }
 
 .nav a:hover {
 }
 
 .nav a.active {
+  text-decoration-line: underline;
+  color: #0059B2;
 }
+
 .close {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+
 }
 
 .close img {
+  position: absolute;
+  top: 22px;
+  right: 30px;
 }
