--- a/src/s2-homeworks/hw13/HW13.module.css
+++ b/src/s2-homeworks/hw13/HW13.module.css
@@ -1,7 +1,22 @@
+.hw {
+  border-bottom: 1px solid #D9D9D9;
+  padding-bottom: 20px;
+}
+
+.wrapper {
+  min-height: 440px;
+}
+
 .buttonsContainer {
+  display: flex;
+  gap: 15px;
 }
 
 .responseContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .imageContainer {
@@ -14,9 +29,15 @@
 }
 
 .code {
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 37px;
+  margin-bottom: 12px;
 }
 
 .text {
 }
 .info {
+  max-width: 510px;
+  width: 100%;
 }
