feat: complete hw 4

--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -2,19 +2,30 @@
 }
 
 .input {
+  border: 1px solid #D1D1D1;
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 5px;
 }
 
 .inputWrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .superInput {
 }
 
 .errorInput {
+  border: 1px solid #CC1439;
 }
 
 .errorInput:focus {
 }
 
 .error {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12px;
+  color: #CC1439;
 }
