--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -26,22 +26,29 @@
 }
 
 .default:hover {
+  background: #0080FF;
 }
 
 .red:hover {
+  background: #FF1A47;
 }
 
 .secondary:hover {
+  background: #E5F0FA;
+  color: #0066CC;
 }
 
 
 .default:active {
+  background: #0059B3;
 }
 
 .secondary:active {
+  background: #C9E5FF;
 }
 
 .red:active {
+  background: #B31232;
 }
 
 .button:disabled {
@@ -49,4 +56,5 @@
   background: #004D99;
   opacity: 0.5;
   color: #002E5C;
+  cursor: default;
 }
